# ftxui-window

./: CMakeLists.txt
cmake/: find-ftxui.cmake
examples/: CMakeLists.txt  example.cpp
include/ftxui-window/: ftxui-window.hpp
src/ftxui-window/: ftxui-window.cpp
